tests/NormalTests/paczka1/fuzzy1/86150412.err
Error in line 7: iJkeA8khbp A657 1,8
Error in line 6: A994 A657 1,2
Error in line 17: iJkeA8khbp S593 29,5
Error in line 24: A994 S593 58,5
